# python-kinetic-simulator

./: .gitignore  README.md  kinetic_simulator.py  pyproject.toml
assets/: README.ipynb
python_kinetic_simulator/: __init__.py  simulator.py
tests/: __main__.py  test_suite.py
