[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_kinetic_simulator"]
exclude = [
    "assets/",
    "tests/",
    ".git/",
    ".github/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "assets/",
    "tests/",
    ".git/",
    ".github/",
]

[project]
name = "python_kinetic_simulator"
description = "Chemical Kinetics Simulator written in Python"
license = "MIT"
version = "0.1.0"
readme = "README.md"
keywords = []
authors = [{name = "Nicolò Tampellini", email = "ntamp@mit.edu"}]
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "scipy",
    "numpy",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.pypi-dependencies]
python_kinetic_simulator = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=7.0"
ruff = ">=0.11"
mypy = ">=1.18.2,<2"
pre-commit = ">=4.2"
jupyter = "*"
matplotlib = "*"

[tool.pixi.dependencies]
pkginfo = ">=1.10"
twine = ">=6.1"
pre-commit = ">=4.4.0,<5"
prettytable = ">=3.17.0,<4"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N802", # Function name should be lowercase
    "N803", # Invalid-argument-name (non-lowercase)
    "N806", # Non-lowercase variable in function
    "N815", # Variable in class scope should not be mixedCase
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value comparison
    "PT013", # Incorrect import of `pytest`
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["python_kinetic_simulator", "tests"]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = [
  "timing: tests used to generate timings",
]
